fixes newAdv notifications on mobile

--- a/src/scss/_newAdvForm.scss
+++ b/src/scss/_newAdvForm.scss
@@ -294,3 +294,9 @@
     margin-right: 190px;
   }
 }
+.brighttheme-elem{
+  @media screen and (max-width: 480px) {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
